testData/highlighting/importIgnoringDirectories.go
package test

import `to_import/<error descr="Cannot resolve file '.name'">.name</error>`
import `to_import/<error descr="Cannot resolve file '_name'">_name</error>`
import `to_import/<error descr="Cannot resolve file 'testdata'">testdata</error>`